--- a/src/drawer2/Recruiter.form
+++ b/src/drawer2/Recruiter.form
@@ -398,7 +398,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="40" y="200" width="280" height="-1"/>
+                      <AbsoluteConstraints x="40" y="250" width="280" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -455,7 +455,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="40" y="270" width="280" height="-1"/>
+                      <AbsoluteConstraints x="40" y="310" width="280" height="-1"/>
                     </Constraint>
                   </Constraints>
 
@@ -469,6 +469,19 @@
                     </Component>
                   </SubComponents>
                 </Container>
+                <Component class="rojerusan.RSButtonHover" name="rSButtonHover1">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Add Company Info"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rSButtonHover1ActionPerformed"/>
+                  </Events>
+                  <Constraints>
+                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                      <AbsoluteConstraints x="40" y="200" width="280" height="30"/>
+                    </Constraint>
+                  </Constraints>
+                </Component>
                 <Component class="javax.swing.JLabel" name="jLabel22">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
