--- a/src/opening/Homapage.form
+++ b/src/opening/Homapage.form
@@ -190,7 +190,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="7e" green="18" red="27" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Contact us"/>
+                <Property name="text" type="java.lang.String" value="Advice"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Medium" size="14" style="1"/>
                 </Property>
